<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="italic" />

        <com.example.investmenttodo.util.view.CircleView
            android:id="@+id/cvHeaderCircleName"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvHeaderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Name" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDrawerMenuProjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/drawer_menu_projects"
        app:drawableLeftCompat="@drawable/ic_project_gray" />

    <TextView
        android:id="@+id/tvDrawerMenuSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/drawer_menu_settings"
        app:drawableLeftCompat="@drawable/ic_setting_gray" />

    <TextView
        android:id="@+id/tvDrawerMenuLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/drawer_menu_logout"
        app:drawableLeftCompat="@drawable/ic_logout_gray" />

</LinearLayout>