<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Card name" />

        <TextView
            android:id="@+id/tvCardDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="Card description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCardDetailInProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/card_detail_in_progress"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCardDetailResolve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/card_detail_resolve"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCardDetailOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_detail_open"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/card_detail_status_card"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_assignment_gray" />

            <TextView
                android:id="@+id/tvCardStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="Открытые" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/card_detail_create_user"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_plus_box_gray" />

            <com.example.investmenttodo.util.view.CircleView
                android:id="@+id/cvCardCreateUser"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvCardCreateUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="Oleg" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/card_detail_executor_user"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_account_box_gray" />

            <com.example.investmenttodo.util.view.CircleView
                android:id="@+id/cvCardExecutorUser"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvCardExecutorUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="Oleg" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/card_detail_members"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_group_account_gray" />

            <TextView
                android:id="@+id/tvCardMembers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="Oleg, Misha" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/card_detail_date_create"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_calendar_gray" />

            <TextView
                android:id="@+id/tvCardCreateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="15.10.1998, 12:34" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCardResolveDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/card_detail_date_resolve"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_calendar_check_gray" />

            <TextView
                android:id="@+id/tvCardResolveDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="15.10.1998, 12:34" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCardDeadlineDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/card_detail_date_deadline"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_calendar_close_gray" />

            <TextView
                android:id="@+id/tvCardDeadlineDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="15.10.1998, 12:34" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_comment_gray" />

            <EditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="28dp"
                android:hint="@string/card_detail_add_comment" />

            <ImageView
                android:id="@+id/ivAddComment"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="-24dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_send_blue" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>